Fix accordion content in Dashboard 2 becoming misaligned sometimes

--- a/demo/css/custom.css
+++ b/demo/css/custom.css
@@ -778,11 +778,11 @@ div.ag-root {
 }
 
 /* Custom Dashboard 2 panel color */
-.panel-sector, .panel-country-selection, .panel-time-period, .panel-category {
+.dashboard2-accordion-panel {
     border-color: #BBBBBB;
 }
 
-.panel-sector > .panel-heading, .panel-country-selection > .panel-heading, .panel-time-period > .panel-heading, .panel-category > .panel-heading {
+.dashboard2-accordion-panel > .panel-heading {
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e5e5e5+100;White+3D */
     background: #ffffff; /* Old browsers */
     background: -moz-linear-gradient(top,  #ffffff 0%, #e5e5e5 100%); /* FF3.6-15 */
@@ -792,6 +792,22 @@ div.ag-root {
 
     border-color: #BBBBBB;
     color: #333;
+}
+
+.dashboard2-accordion-panel > .panel-heading {
+    padding: 0;
+    height: 57px;
+}
+
+.dashboard2-accordion-inner-heading {
+    height: 57px;
+    padding: 15px;
+}
+
+.dashboard2-accordion-inner-heading > * {
+    vertical-align: middle;
+    line-height: 27px;
+    height: 27px;
 }
 
 .dashboard2-info-popover {
@@ -820,16 +836,11 @@ div.ag-root {
 .accordion-arrow {
     background: #d0d0d0;
     display: inline-block;
-    margin-left: 0;
-    margin-top: 0;
     position: relative;
     width: 70px;
     height: 57px;
 
-    top: -20px;
-    left: -15px;
-
-    margin-right: 15px;
+    margin-right: 35px;
 
     /* Center text horizontally and vertically */
     text-align: center;
@@ -851,13 +862,10 @@ div.ag-root {
     border-bottom: 28.5px solid transparent;
 }
 
-.dashboard2-accordion-heading {
-    margin-top: 10px;
-    height: 27px;
-}
-
-.panel-sector > div > .panel-body, .panel-time-period > div > .panel-body, .panel-category > div > .panel-body, .panel-country-selection > div > .panel-body {
-    padding-top: 19px;
+/* Make padding of aggregate panel body in Dashboard 2 5px left and right*/
+.dashboard2-aggregate-panel > .panel-collapse > .panel-body {
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 /* Custom green callout for Dashboard */
